Activity: input widget's active state shadow cut off fix

--- a/client/Social/Activity/styl/activity.styl
+++ b/client/Social/Activity/styl/activity.styl
@@ -20,6 +20,7 @@ body.activity
 
   .app-content
     max-width           600px
+    overflow            visible
 
     .search-input
       right         0
